[gd_scene load_steps=23 format=3 uid="uid://ckx0evukhppdl"]

[ext_resource type="Script" path="res://scenes/mob/bearmob.gd" id="1_lcjnv"]
[ext_resource type="Texture2D" uid="uid://brf4aoiw2k67k" path="res://art/mob/bear_spritesheet-01.png" id="2_xgfbe"]
[ext_resource type="Texture2D" uid="uid://dwpsv2qqw4jbe" path="res://art/environment/shadow_mult.png" id="3_whi4w"]
[ext_resource type="Texture2D" uid="uid://b65q7i7c1etgw" path="res://projectiles/particle3.png" id="4_pep6g"]
[ext_resource type="Texture2D" uid="uid://coogi3ncr2xwi" path="res://icon.png" id="5_fgr5j"]

[sub_resource type="CapsuleShape2D" id="8"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fempb"]
blend_mode = 3

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ilesv"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 6)
emission_ring_height = 1.0
emission_ring_radius = 6.0
emission_ring_inner_radius = 0.5
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 98, 0)
initial_velocity_min = 789.47
initial_velocity_max = 852.63
angular_velocity_min = -0.07
angular_velocity_max = 127.59
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
radial_accel_max = 50.53
damping_min = 20.0
damping_max = 85.27
angle_min = -30.0
angle_max = 30.0
scale_min = 0.3
scale_max = 1.3
turbulence_enabled = true

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/shadow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 480)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.849158, 0.674999)]
}

[sub_resource type="Animation" id="Animation_tyj1j"]
resource_name = "bearmob_attack"
length = 0.8
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 570)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.849158, 0.674999)]
}

[sub_resource type="Animation" id="Animation_2ffpw"]
resource_name = "mob_attack_left"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 570)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.849158, 0.515)]
}

[sub_resource type="Animation" id="Animation_ekqj3"]
resource_name = "mob_attack_right"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-64, 570)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.849158, 0.515)]
}

[sub_resource type="Animation" id="4"]
resource_name = "mob_down"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.515)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/shadow:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 480)]
}

[sub_resource type="Animation" id="5"]
resource_name = "mob_left"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 500)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.849158, 0.515)]
}

[sub_resource type="Animation" id="6"]
resource_name = "mob_right"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.849158, 0.515)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/shadow:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-64, 500)]
}

[sub_resource type="Animation" id="7"]
resource_name = "mob_up"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.515)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/shadow:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 480)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bb3kj"]
_data = {
"RESET": SubResource("3"),
"bearmob_attack": SubResource("Animation_tyj1j"),
"mob_attack_left": SubResource("Animation_2ffpw"),
"mob_attack_right": SubResource("Animation_ekqj3"),
"mob_down": SubResource("4"),
"mob_left": SubResource("5"),
"mob_right": SubResource("6"),
"mob_up": SubResource("7")
}

[sub_resource type="ParticleProcessMaterial" id="9"]
emission_shape = 5
emission_point_count = 1
gravity = Vector3(100, 0, 0)

[sub_resource type="Animation" id="10"]
length = 0.001

[sub_resource type="Animation" id="11"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_csyb8"]
_data = {
"RESET": SubResource("10"),
"dead": SubResource("11")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_o5bca"]

[node name="bear" type="CharacterBody2D"]
collision_layer = 13
collision_mask = 0
script = ExtResource("1_lcjnv")

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2(0, 250)
scale = Vector2(15, 15)
shape = SubResource("8")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_xgfbe")
hframes = 8
vframes = 3
frame = 16

[node name="shadow" type="Sprite2D" parent="Sprite"]
show_behind_parent = true
material = SubResource("CanvasItemMaterial_fempb")
position = Vector2(0, 480)
scale = Vector2(0.849158, 0.674999)
texture = ExtResource("3_whi4w")

[node name="pars_dirt" type="GPUParticles2D" parent="Sprite"]
show_behind_parent = true
position = Vector2(0, 488)
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_ilesv")
texture = ExtResource("4_pep6g")
lifetime = 0.6
explosiveness = 0.84
randomness = 0.55

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bb3kj")
}

[node name="pars" type="GPUParticles2D" parent="."]
visible = false
position = Vector2(552, 296)
emitting = false
amount = 50
process_material = SubResource("9")
texture = ExtResource("4_pep6g")
lifetime = 3.0

[node name="deadanim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_csyb8")
}

[node name="vis" type="VisibleOnScreenNotifier2D" parent="."]

[node name="deathTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="atkTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="atkRadius" type="Area2D" parent="." groups=["earthatk"]]
show_behind_parent = true
position = Vector2(0, 495)
collision_layer = 13
collision_mask = 13

[node name="earth_shatter_hitbox" type="CollisionShape2D" parent="atkRadius"]
scale = Vector2(40, 40)
shape = SubResource("CircleShape2D_o5bca")

[node name="Sprite2D" type="Sprite2D" parent="atkRadius/earth_shatter_hitbox"]
visible = false
show_behind_parent = true
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_fgr5j")

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="animation_finished" from="deadanim" to="." method="_on_deadanim_animation_finished"]
[connection signal="screen_entered" from="vis" to="." method="_on_vis_screen_entered"]
[connection signal="screen_exited" from="vis" to="." method="_on_vis_screen_exited"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]
[connection signal="timeout" from="atkTimer" to="." method="_on_atk_timer_timeout"]
